--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/projeto8-zaprecall/src/assets/media/logo-pequeno.png">
     <title>ZapZap Recall</title>
+    <!-- css
+      font-family: 'Righteous', cursive;
+      font-family: 'Roboto', sans-serif; 
+    -->
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="root"></div>
   </body>
 </html>
